split up edc methods to avoid sleeping in backend